test/fixtures/themes/002-comment-id/invalid/page.hbs
{{post}}
    <div>{{id}}</div>
{{/post}}